# sweep_test

./: .gitignore  Estimator_Demo.ipynb  Predictor_Demo.ipynb  README.md  STRUCTURE_EMISSIONS.lyrx  SWEEP_estimator.py  SWEEP_estimator_vignette.qmd  SWEEP_predictor.py  _quarto.yml  examples.py  index.qmd  pyproject.toml  requirements.txt  scratch.py  sweep_metadata.xlsx
data/: demo_polygon.sbx
data/demo_shapes/: demo_multipoly.dbf  demo_multipoly.sbn  demo_multipoly.sbx  demo_multipoly.shp  demo_multipoly.shp.xml  demo_multipoly.shx  demo_poly2.gpkg  demo_polygon.dbf  demo_polygon.sbn  demo_polygon.shp  demo_polygon.shp.xml  demo_polygon.shx  demo_polygon1.dbf  demo_polygon1.sbn  demo_polygon1.sbx  demo_polygon1.shp  demo_polygon1.shp.xml  demo_polygon1.shx  fire_demo.dbf  fire_demo.sbn  fire_demo.sbx  fire_demo.shp  fire_demo.shp.xml  fire_demo.shx
data/emissions_factors/: Bad_Test_EFs.xlsx  CARB_EFs.xlsx  Holder_EFs.xlsx  Test_EFs.xlsx
data/predictor_inputs/: CAT_USECODE_crossref.csv  CoAbDis.shp.xml  structure_stats.csv
docs/: SWEEP_estimator_vignette.html  Untitled.html  index.html  search.json
docs/scripts_depr/: Estimator_Demo.html  (+1 more)
scripts/: aggregate.py  aoi_handler.py  config.py  emissions.py  filters.py  get_bsdb.py  vehicles.py  write_outputs.py
scripts_depr/: Estimator_Demo.py  aggregate.py  aoi_handler.py  config.py  emissions.py  filters.py  get_bsdb.py  vehicles.py  write_outputs.py
sweep/: aggregate.py  config.py  emissions.py  estimator_main.py  filters.py  get_bsdb.py  predictor_main.py  predictor_parcels.py  vehicles.py  write_outputs.py
(+40 files in other folders)
