[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"




[project]
name = "SWEEP Scripted"
version = "0.0.1"
authors = [
    {name= "Genoa Starrs", email = "gistarrs@ucanr.edu"},
]
description = "Structure Wildfire Emissions Estimator and Predictor"
readme = "README.md"
requires-python = ">=3.10"
description = "run FOFEM and pulls perimeters from FEDS"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: CARB/SWEEP",
]
license = { text = "Apache-2.0" }
license-files = ["LICEN[CS]E*"]
keywords = ["emissions", "wildfire", "structures"]
dependencies = [
]

[project.urls]
